test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/preconditions(deprecated)/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-a
  namespace: default
  annotations:
    policy.lan/value: foo
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-b
  namespace: default
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-c
  namespace: default
  annotations:
    policy.lan/value: bar
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx
